# vigogne

./: .gitignore  README.md  demo.py  finetune.py  finetune_seq2seq.py  infer.ipynb  pyproject.toml  requirements.txt  utils.py
blogs/: 2023-08-17-vigogne-chat-v2_0.md
configs/: ds_zero2_no_offload.json
data/chat/: dummy_chat.jsonl  oasst_20230412_fr_1k.jsonl  oasst_20230412_fr_top1.jsonl
data/instruct/: gt_doremiti_instructions.jsonl  prompt_vigogne.txt  seed_tasks_vigogne.jsonl
demos/: demo_chat.py
docs/: application.md  data.md  inference.md  model.md  training.md
enno/datasets/: data-eval.json  data-eval.jsonl  data-train.json  data-train.jsonl  excel2jsonl.py  prompt_structure.txt
enno/scripts/: Install.sh  Merge-13b.sh  Train-13b.sh
enno/src/: app.py  app2.py
examples/application/: run_langchain_document_qa.sh
examples/inference/: run_demo.sh  run_fastchat_cli.sh  run_llama_cpp.sh  run_server_vllm.sh
examples/train/: train_sft_chat_llama2.sh  train_sft_chat_llama_7b.sh  train_sft_chat_lora_ds.sh  train_sft_chat_lora_int4.sh  train_sft_chat_lora_int8.sh  train_sft_instruct_bloom_7b1.sh  train_sft_instruct_flan_t5.sh  train_sft_instruct_llama2.sh  train_sft_instruct_llama_7b.sh  train_sft_instruct_llama_7b_multi_gpus.sh  train_sft_instruct_llama_7b_multi_gpus_deepspeed.sh  train_sft_instruct_lora_int8.sh
notebooks/: infer_chat.ipynb  infer_instruct.ipynb
prompts/: chat.txt  instruct.txt
scripts/: convert_llama_weights_to_hf.py  export_state_dict_checkpoint.py  lengths.ipynb  merge_lora_weights.py  merge_peft_adapters.py  translate_alpaca.py  translate_data.py
scripts/data_generation/: deduplicate_instructions.py  deduplicate_self_instruct.py  generate_conversations.py  generate_instructions.py  (+4 more)
tests/: test_processors.py  test_tokenizers.py
vigogne/: constants.py  data_utils.py  file_utils.py  preprocess.py  train_sft.py
(+104 files in other folders)
